Fix se-ep not centering on smaller screen widths
Former-commit-id: 731336c451df02944e3f48a1fbe29e8b62b7dc7f

--- a/web_ui/src/Components/Banners/ProgressBar.scss
+++ b/web_ui/src/Components/Banners/ProgressBar.scss
@@ -2,6 +2,7 @@
   grid-area: progressbar;
   align-self: flex-end;
   display: grid;
+  justify-content: start;
 
   p {
     margin: 0;
